# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [3.3.13-hall] 2021-10-23

### Added

- Nova função pra criar mensagens no `IteractionCommandContext` junto de uma função pra criar a response bonintinha

### Changed

- O receptor deve clicar num botão para aceitar o presente do `/give`
- O código do `/give` foi reescrito
- Contas banidas e/ou deletadas não aparecerão na contagem do top

### Fix

- Titulo do embed do top arcanjos
- Votos no evendo do Halloween dão demônios como prêmio
- Categoria do Give

## [3.3.12-hall] - 2021-10-20

### Added

- O evento de Halloween começou! Ajude à Menhera a chegar ao ápice de seu poder, para que ela possa finalmente se vingar...

## [3.3.12] - 2021-10-20

### Added

- Create this `CHANGELOG.md` file
- Deleted accounts will no longer appear in top's

### Changed

- Rewrite top command

### Fixed

- Replies properly when execute trisal without being on a trisal and without mentioning anyone