@@ -1,0 +1,39 @@
+/* eslint-disable no-unused-expressions */
+import MenheraClient from 'MenheraClient';
+import InteractionCommand from '@structures/command/InteractionCommand';
+import InteractionCommandContext from '@structures/command/InteractionContext';
+
+export default class InventoryInteractionCommand extends InteractionCommand {
+  constructor(client: MenheraClient) {
+    super(client, {
+      name: 'inventario',
+      description: '「📂」・Abre o inventário de alguém',
+      category: 'info',
+      options: [
+        {
+          name: 'user',
+          type: 'USER',
+          description: 'Usuário para abrir o inventário',
+          required: false,
+        },
+      ],
+      cooldown: 7,
+      clientPermissions: ['EMBED_LINKS'],
+    });
+  }
+
+  async run(ctx: InteractionCommandContext): Promise<void> {
+    const user =
+      ctx.options.getUser('user') && ctx.options.getUser('user', true).id !== ctx.author.id
+        ? await this.client.repositories.userRepository.find(ctx.options.getUser('user', true).id)
+        : ctx.data.user;
+
+    if (!user) {
+      ctx.makeMessage({
+        content: ctx.prettyResponse('error', 'no-user'),
+      });
+      return;
+    }
+    console.log('a');
+  }
+}
